# college-basketball-system

./: .env.example  .gitignore  .pre-commit-config.yaml  Basketball_Model_Training_Colab.ipynb  CALIBRATION_IMPROVEMENTS.md  DATA_REQUIREMENTS.md  DATA_SOURCES.md  FULL_AUTOMATION_GUIDE.md  GETTING_TO_75_PERCENT.md  IMPLEMENTATION_SUMMARY.md  LLM_ENSEMBLE_GUIDE.md  ONE_DAY_FAST_TRACK.md  QUICKSTART.sh  QUICK_START_CALIBRATION.md  README.md  REAL_DATA_SETUP.md  SELF_LEARNING_GUIDE.md  START_HERE.md  SYSTEM_STATUS.md  advanced_betting_engine.py  advanced_ml_pipeline.py  agent_player_coach_relationships.py  alternative_data_engine.py  auto_daily_bets.py  automatic_game_fetcher.py  automatic_outcome_tracker.py  automatic_prediction_generator.py  backtest_results.json  backtest_results_v2_20251120_044137.json  backtest_results_v2_20251120_044229.json  backtest_results_v2_20251120_044418.json  backtest_results_v2_20251120_135526.json  backtest_results_v2_20251120_140144.json  backtest_results_v2_20251121_014847.json  backtest_results_v2_20251121_220244.json  backtest_results_v2_20251121_220310.json  barttorvik_scraper.py  basketball_analytics.db  basketball_analytics.py  basketball_backtester.py  (+69 more)
.github/workflows/: ci.yml
data/: basketball_rag.db
data/historical/: all_efficiency_10yr.csv
data/historical/2015/: efficiency.csv  efficiency.json  games.csv  games.json
data/historical/2016/: efficiency.csv  efficiency.json  games.csv  games.json
data/historical/2017/: efficiency.csv  efficiency.json  games.csv  games.json
data/historical/2018/: efficiency.csv  efficiency.json  games.csv  games.json
data/historical/2019/: efficiency.csv  efficiency.json  games.csv  games.json
data/historical/2020/: efficiency.csv  efficiency.json  games.csv  games.json
data/historical/2021/: efficiency.csv  efficiency.json  games.csv  games.json
data/historical/2022/: efficiency.csv  efficiency.json  games.csv  games.json
data/historical/2023/: efficiency.csv  efficiency.json  games.csv  games.json
data/historical/2024/: efficiency.csv  efficiency.json  games.csv  games.json
data/historical/2025/: efficiency.csv  efficiency.json  games.csv  games.json
data/historical_wcbb/: all_games_wcbb.csv
data/historical_wcbb/2015/: games.csv
data/historical_wcbb/2016/: games.csv
data/historical_wcbb/2017/: games.csv
data/historical_wcbb/2018/: games.csv
data/historical_wcbb/2019/: games.csv
data/historical_wcbb/2020/: games.csv
data/historical_wcbb/2021/: games.csv
data/historical_wcbb/2022/: games.csv
data/historical_wcbb/2023/: games.csv
data/historical_wcbb/2024/: games.csv
data/historical_wcbb/2025/: games.csv
data/historical_wnba/: all_games_wnba.csv
data/historical_wnba/2015/: games.csv
data/historical_wnba/2016/: games.csv
data/historical_wnba/2017/: games.csv
data/historical_wnba/2018/: games.csv
data/historical_wnba/2019/: games.csv
data/historical_wnba/2020/: games.csv
data/historical_wnba/2021/: games.csv
data/historical_wnba/2022/: games.csv
data/historical_wnba/2023/: games.csv
data/historical_wnba/2024/: games.csv
data/predictions/: prediction_log.json
tests/: __init__.py  test_analytics.py  test_betting_engines.py  test_core_prediction_engine.py
